syntax = "proto3";

package common.events; 

// Events 
message TradeEvent {
  string exchange = 1;
  string type = 2;
  string eventTime = 3;
  string marketName = 4;
  string tradeID = 5;
  double price = 6;
  double quantity = 7;
  double total = 8;
}

message Auth {
  string key = 1;
  string secret = 2;
}

message OrderEvent {
  string exchange = 1;
  string orderID = 2;
  string userID = 3;
  string keyID = 4;
  string key = 5;
  string secret = 6;
  string marketName = 7;
  string side = 8;
  string orderType = 9;
  string currency = 10;
  double quantity = 11;
  double price = 12;
  string condition = 13;
  string conditions = 14;
  string exchangeOrderID = 15;
  string exchangeMarketName = 16;
  string status = 17;
}

message EngineStartEvent {
  string engineID = 1;
}